objects/SkillAssign__c/SkillAssign__c.object-meta.xml
<CustomObject>
    <label>SkillAssign</label>
    <nameField>
        <label>SkillAssign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SkillAssigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>