objects/SkillAssign__c/fields/SkillTemplateId__c.field-meta.xml
<CustomField>
    <fullName>SkillTemplateId__c</fullName>
    <label>SkillTemplateId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>