objects/SkillAssign__c/fields/Special_Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Special_Skill_Name__c</fullName>
    <label>Special Skill Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>