objects/SkillAssign__c/fields/SRcharacter__c.field-meta.xml
<CustomField>
    <fullName>SRcharacter__c</fullName>
    <label>SRcharacter</label>
    <referenceTo>SRcharacter__c</referenceTo>
    <relationshipLabel>SkillAssigns</relationshipLabel>
    <relationshipName>SkillAssigns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>