objects/SkillAssign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Special_Skill_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>